Fix Text’s left align

--- a/source/text/styles.css
+++ b/source/text/styles.css
@@ -3,7 +3,7 @@
 }
 
 .root_align_left {
-  text-align-last: left;
+  text-align: left;
 }
 
 .root_align_center {
